CHANGELOG
--------------------------

ClanSphere 2009.0 >> 2009-04-xx
___________________________________________________________

-> Added abcode editor bridge to allow the usage of other wysiwyg software (hajo)
-> Added compatible-view for old browsers to cs_manage function (hajo)
-> Added possibilities to close or pinup threads during writing, close also for create commentes (fay-pain)
-> Fixed many getimagesize php notice issues (hajo)
-> Installation detects and tests database extensions automated now (hajo)
-> Moved charset info from languages to cs_init() and set it to UTF-8 by default (hajo)
-> Reworked clansphere/software and database/roots page to be more helpful (hajo)

-- Fixed a huge number of bugs that were reported at "Trac" --


ClanSphere 2009.0 RC2 >> 2009-04-05
___________________________________________________________

-> Added caching functions and implemented caching in access module and metatags (duriel, hajo)
-> Added possibilities to close or pinup threads during writing, close also for create commentes (fay-pain)
-> Improved handling of filetypeicons (gahero)
-> Hiding squads in fightus will also hide them in wars now (gahero)
-> Fixed alot of path settings in themes to be compatible with mod_rewrite (gahero, hajo)
-> Fixed many bugs in the logs mod and added php errors to error log files (hajo)
-> Reworked sec_news to only scan for news every 2,5 hours and be displayed everywhere (hajo)
-> Hiding tables in squads view when there are no awards, ranks or wars (fay-pain)

-- Fixed a huge number of bugs and a few wishes that were reported at "Trac" --


ClanSphere 2009.0 RC1 >> 2009-03-25
___________________________________________________________

-> Now using themes everywhere (whole team, mainly fay-pain)
-> Added and reworked medals module to ClanSphere (mc.alcatraz, duriel)
-> Added function create_user to create every user in the same way (denni)