@@ -6,11 +6,13 @@ ___________________________________________________________
 
 -> Added abcode editor bridge to allow the usage of other wysiwyg software (hajo)
 -> Added compatible-view for old browsers to cs_manage function (hajo)
--> Added possibilities to close or pinup threads during writing, close also for create commentes (fay-pain)
+-> Added possibilities to close or pinup threads during writing, close also for create comments (fay-pain)
 -> Fixed many getimagesize php notice issues (hajo)
 -> Installation detects and tests database extensions automated now (hajo)
 -> Moved charset info from languages to cs_init() and set it to UTF-8 by default (hajo)
 -> Reworked clansphere/software and database/roots page to be more helpful (hajo)
+-> The AJAX fallback solution now works, enabling AJAX for everybody is now possible (duriel)
+-> Worked on the count archive so there is a daily archieve to increase the performance of big websites (duriel)
 
 -- Fixed a huge number of bugs that were reported at "Trac" --
 
